[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/BossEnemy2.gd" type="Script" id=1]
[ext_resource path="res://Assets/10B.png" type="Texture" id=2]
[ext_resource path="res://Assets/Explotion.tres" type="Animation" id=3]
[ext_resource path="res://Assets/Explotion.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/explosion1.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/06.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22.0569, 14.3837 )

[node name="Boss2" type="RigidBody2D"]
rotation = 3.14159
collision_layer = 16
collision_mask = 8
mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Fire" type="Timer" parent="."]
wait_time = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="BulletPoint" type="Position2D" parent="."]
position = Vector2( 40, -50 )

[node name="Sprite" type="Sprite" parent="BulletPoint"]
texture = ExtResource( 6 )

[node name="BulletPoint2" type="Position2D" parent="."]
position = Vector2( -40, -50 )

[node name="BulletPoint3" type="Position2D" parent="."]
position = Vector2( -20, -30 )

[node name="BulletPoint4" type="Position2D" parent="."]
position = Vector2( 20, -30 )

[node name="Movement" type="Tween" parent="."]

[node name="ExplotionAnim" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
hframes = 5
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ExplotionAnim"]
anims/Explotion = ExtResource( 3 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[connection signal="timeout" from="Fire" to="." method="_on_Fire_timeout"]
